--- a/src/main/frontend/src/styles/myInfo/addressTab.css
+++ b/src/main/frontend/src/styles/myInfo/addressTab.css
@@ -1,3 +1,12 @@
+.member-ssg-com-by {
+  color: var(--memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5black);
+  font-family: "Arial-Narrow", Helvetica;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 16px;
+}
+
 .div-pop-content {
     align-items: flex-start;
     display: flex;
@@ -273,6 +282,17 @@
     top: 18px;
     white-space: nowrap;
   }
+
+.div-pop-content .input-1 {
+  background-color: var(--memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5nero);
+  border: 1px solid;
+  border-color: var(--memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375silver-chalice);
+  height: 28px;
+  left: 16px;
+  position: absolute;
+  top: 13px;
+  width: 96px;
+}
   
   .div-pop-content .input-2 {
     background-color: var(--memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5nero);
@@ -552,6 +572,7 @@
     gap: 12.7px;
     position: relative;
     width: 100%;
+    padding: 10px;
   }
   
   .div-pop-content .link-2 {
@@ -613,6 +634,32 @@
   
   .div-address-txt { 
     position: absolute;
+    width: 100%;
+    height: 60px;
     top: 252px;
     padding-left: 100px;
+    padding-top: 10px;
   }
+  .input-detail-span {
+    position: absolute;
+    left: 18px;
+    top: 18px;
+
+  }
+  .address-detail-div{
+      margin-left: 14px;
+  }
+
+.input-detail-span .span-1{
+  color: var(--memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375dove-gray);
+  font-family: "Arial-Bold", Helvetica;
+  font-size: 11.6px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  line-height: 18px;
+  margin-top: -0.8px;
+  position: relative;
+  white-space: nowrap;
+  width: -moz-fit-content;
+  width: fit-content;
+}
